fix: set z-index 2 on export modal fade and body

--- a/packages/web-interface/src/export-modal/component.css
+++ b/packages/web-interface/src/export-modal/component.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
 }
 
 .export-modal-body {
@@ -13,6 +14,7 @@
     left: 20px;
     right: 20px;
     position: absolute;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     color: #ffffff;
